WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13688
REGRESSION (
r20943
+): Colloquy doesn't show any messages
https://bugs.webkit.org/show_bug.cgi?id=13688
Summary
REGRESSION (r20943+): Colloquy doesn't show any messages
Adam Roben (:aroben)
Reported
2007-05-11 21:14:43 PDT
Sometime after
r20943
, Colloquy stopped showing messages. Repro steps: 1. Launch Colloquy with DYLD_FRAMEWORK_PATH set to a post-
r20943
WebKit 2. Type a message Results: The message doesn't appear in the chat window.
Attachments
Test case
(569 bytes, text/html)
2007-05-11 21:53 PDT
,
Timothy Hatcher
no flags
Details
More complicated test case to really illustrate the problem
(852 bytes, text/html)
2007-05-11 23:19 PDT
,
Dave Hyatt
no flags
Details
Patch to fix bug
(2.17 KB, patch)
2007-05-11 23:45 PDT
,
Dave Hyatt
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2007-05-11 21:53:47 PDT
Created
attachment 14502
[details]
Test case This test should fill the whole view port green.
Timothy Hatcher
Comment 2
2007-05-11 21:58:09 PDT
This has to do with CSS tables. Colloquy has a body CSS rule: body { display: table } And other rules for table-row and table-cell. I'll look at redoing this in Colloquy (it was rather whacky, but it worked!)
Timothy Hatcher
Comment 3
2007-05-11 21:59:00 PDT
This test works in Firefox also.
Dave Hyatt
Comment 4
2007-05-11 23:19:47 PDT
Created
attachment 14503
[details]
More complicated test case to really illustrate the problem Firefox 2 and Safari 2 both fail this one too. WebKit fails it the worst though.
Dave Hyatt
Comment 5
2007-05-11 23:45:46 PDT
Created
attachment 14504
[details]
Patch to fix bug The behavior in this patch exactly matches Gran Paradiso Alpha 4. Empty cells (with no lines) had their baseline wrongly at the top in FFX2 (one of the reasons it failed Acid2). Now that the baseline of the cell is on the bottom, Gran Paradiso Alpha 4 passes this test case as well. I even tried putting text in cell 2 in the test case, wondering if the cell would move such that it hung out of the table itself. It did indeed do that with both my patch and Gran Paradiso.
Dave Hyatt
Comment 6
2007-05-12 00:02:34 PDT
Fixed in
r21425
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug