        Fix for http://bugs.webkit.org/show_bug.cgi?id=13688, Colloquy is broken!

Make sure to adjust the baseline of a percentage height table cell's row if the
        cell flexes (and lowers the baseline).

        Reviewed by olliej

        fast/tables/vertical-align-baseline-readjust.html

        (WebCore::RenderTableSection::calcRowHeight):
        (WebCore::RenderTableSection::layoutRows):
        * rendering/RenderTableSection.h:
        (WebCore::RenderTableSection::getBaseline):



Canonical link: https://commits.webkit.org/17871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21425 268f45cc-cd09-0410-ab3c-d52691b4dbfc