WebCore/rendering/RenderTableSection.cpp
@@ -177,7 +177,7 @@ bool RenderTableSection::ensureRows(int numRows)
             m_grid[r].row = new Row(nCols);
             m_grid[r].row->fill(emptyCellStruct);
             m_grid[r].rowRenderer = 0;
-            m_grid[r].baseLine = 0;
+            m_grid[r].baseline = 0;
             m_grid[r].height = Length();
         }
     }
@@ -378,7 +378,7 @@ void RenderTableSection::calcRowHeight()
         if (baseline) {
             // increase rowheight if baseline requires
             m_rowPos[r + 1] = max(m_rowPos[r + 1], baseline + bdesc + (m_grid[r].rowRenderer ? spacing : 0));
-            m_grid[r].baseLine = baseline;
+            m_grid[r].baseline = baseline;
         }
 
         m_rowPos[r + 1] = max(m_rowPos[r + 1], m_rowPos[r]);
@@ -525,6 +525,14 @@ int RenderTableSection::layoutRows(int toAdd)
                                            rHeight - cell->borderTop() - cell->paddingTop() - 
                                                      cell->borderBottom() - cell->paddingBottom()));
                 cell->layoutIfNeeded();
+                
+                // If the baseline moved, we may have to update the data for our row. Find out the new baseline.
+                EVerticalAlign va = cell->style()->verticalAlign();
+                if (va == BASELINE || va == TEXT_BOTTOM || va == TEXT_TOP || va == SUPER || va == SUB) {
+                    int b = cell->baselinePosition();
+                    if (b > cell->borderTop() + cell->paddingTop())
+                        m_grid[r].baseline = max(m_grid[r].baseline, b);
+                }
             }
             
             int te = 0;
@@ -534,7 +542,7 @@ int RenderTableSection::layoutRows(int toAdd)
                 case TEXT_TOP:
                 case TEXT_BOTTOM:
                 case BASELINE:
-                    te = getBaseline(r) - cell->baselinePosition() ;
+                    te = getBaseline(r) - cell->baselinePosition();
                     break;
                 case TOP:
                     te = 0;
